[project]
name = "wasm-publish-action"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "cryptography>=45.0.6",
    "leb128>=1.0.8",
    "protobuf>=6.32.1",
    "pydantic<2",
    "python-dateutil>=2.8.2",
    "requests>=2.32.4",
    "semver>=3.0.4",
    "urllib3>=1.25.3",
    "validators>=0.35.0",
]
