[project]
name = "wasm-action"
version = "0.0.3"
description = "Interact with WebAssembly registries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "cryptography>=45.0.6",
    "leb128>=1.0.8",
    "protobuf>=6.32.1",
    "pydantic<2",
    "python-dateutil>=2.8.2",
    "requests>=2.32.4",
    "semver>=3.0.4",
    "urllib3>=1.25.3",
    "validators>=0.35.0",
]

[project.urls]
Repository = "https://github.com/xelato/wasm-action"

[project.scripts]
wasm-action = "wasm_action.cli:cli"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["wasm_action", "warg_openapi"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "vcrpy>=8.1.0",
]
