[project]
name = "wasm-action"
version = "0.0.0"
description = "Interact with WebAssembly registries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "cryptography>=45.0.6",
    "leb128>=1.0.8",
    "protobuf>=6.33.5",
    "pydantic>=1.10.26,<2",
    "pydantic-monty>=0.0.4",
    "python-dateutil>=2.8.2",
    "requests>=2.32.4",
    "semver>=3.0.4",
    "urllib3>=2.6.3",
    "validators>=0.35.0",
    "wasmtime>=40.0.0",
]

[project.urls]
Repository = "https://github.com/xelato/wasm-action"

[project.scripts]
wasm-action = "wasm_action.cli:cli"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["wasm_action", "warg_openapi"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "vcrpy>=8.1.0",
]


[tool.ruff]
exclude = [
    "example/",
    "src/warg_openapi",
    "src/wasm_action/warg/proto.py",
]
